Fix: Java IO library was not working on some devices.